--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     
 </body>
-<!-- <script type="module" src="./js/task-1.js" defer></script> -->
-<!-- <script type="module" src="./js/task-2.js" defer></script> -->
+<script type="module" src="./js/task-1.js" defer></script>
+<script type="module" src="./js/task-2.js" defer></script>
 <script type="module" src="./js/task-3.js" defer></script>
 </html>
